# Image-Feature-Detection-and-Matching

./: .gitignore  CMakeLists.txt  README.md  snipp.txt
SIFT/: Descriptor.h  GenerateDescriptor.cpp  HarrisCorner.cpp  HarrisCorner.h  Main.cpp  SIFT.vcxproj  SIFT.vcxproj.filters  SSD.cpp  SSD.h
src/: ANMS.h  GenerateDescriptor.h  Key_Point.h  Main.cpp  SSD.h
submission/: README.txt  SIFT.sln
submission - Copy/SIFT/: ANMS.cpp  Descriptor.h  Main.cpp
submission/SIFT/: GenerateDescriptor.cpp  HarrisCorner.cpp  SIFT.vcxproj  SIFT.vcxproj.filters  SSD.cpp
